--- a/templates/dash.html
+++ b/templates/dash.html
@@ -127,7 +127,7 @@
         <div class="col-lg-4">
             <div class="chart-card">
                 <div class="chart-header mb-4">
-                    <h5><i class="fa-solid fa-crown me-2 text-warning"></i>Top Selling Items</h5>
+                    <h5><i class="fa-solid fa-crown me-2 text-warning"></i>Top Selling Products</h5>
                 </div>
                 <div style="height: 280px; position: relative;">
                     <canvas id="productChart"></canvas>
@@ -234,4 +234,5 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 {% endblock %}
+
 
